alignment fixes

--- a/src/components/Layout/ProfileDetails/AcademicsAndExperience/Academics/Academics.module.scss
+++ b/src/components/Layout/ProfileDetails/AcademicsAndExperience/Academics/Academics.module.scss
@@ -10,6 +10,11 @@
     margin: 0 0 0 10px;
   }
 
+
+  .academic__title {
+    margin: 0 0 30px 0;
+  }
+
   .academics__timeline {
     list-style: none;
     position: relative;
