--- a/src/components/Layout/ProfileDetails/ProfileIntro/ProfileIntro.module.scss
+++ b/src/components/Layout/ProfileDetails/ProfileIntro/ProfileIntro.module.scss
@@ -7,7 +7,7 @@
 
     @include bp.tablet {
         max-width: 400px;
-        margin: 30px 30px 0 30px;
+        margin: 70px 30px 0 30px;
     }
 
     @include bp.lgDesktop {
