--- a/src/components/Layout/ProfileDetails/Skills/SkillsDetails/SkillsDetails.module.scss
+++ b/src/components/Layout/ProfileDetails/Skills/SkillsDetails/SkillsDetails.module.scss
@@ -26,6 +26,9 @@
 
     .skill__text {
       text-align: center;
+      @include bp.desktop {
+        text-align: unset;
+      }
     }
     
     .progressBarWrapper {
